--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -8,6 +8,16 @@
 
  "stations": [
 
+{
+     "name": "True Premier Football 1 HD",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+
 			{
      "name": "True Premier Football 1",
      "image": "https://dookeela.live/uploads/1664499665.png",
@@ -17,19 +27,72 @@
 	 "userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
- 
- 
+     {
+      "name": "Premier Football 1TH",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+    },
+     {
+      "name": "Premier Football 1TTH",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+    },
+
+{  
+name:"Premier Football HD 1FW",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
+url:"https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
     {
      "name": "True Premier Football 2",
      "image": "https://dookeela.live/uploads/1664499673.png",
      "url": "https://dookeela.live/live-tv/epl2",
      "referer": "https://dookeela.live/",
      "info": "NexterPremierLeague",
-	 "userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
 },
- 
- 
+    {
+     "name": "Premier Football 2TH",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+     "info": "NexterPremierLeague",
+    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+    {
+     "name": "Premier Football 2TTH",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+{  
+name:"Premier Football HD 2FW",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
+url:"https://fw4free.inwstream.com/fw4free/ch2.stream/playlist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
     {
      "name": "True Premier Football 3",
      "image": "https://dookeela.live/uploads/1664499681.png",
@@ -39,7 +102,36 @@
 	 "userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
  },
- 
+    {
+     "name": "Premier Football 3TH",
+     "image": "https://dookeela.live/uploads/1664499681.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"    
+ },
+    {
+     "name": "Premier Football 3TTH",
+     "image": "https://dookeela.live/uploads/1664499681.png",
+     "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf3/playlist.m3u8",
+     "referer": "https://dookeela.live/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+ },
+
+{  
+name:"Premier Football HD 3FW",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
+url:"https://fw4free.inwstream.com/fw4free/ch3.stream/playlist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
     {
      "name": "True Premier Football 4",
      "image": "https://dookeela.live/uploads/1664499692.png",
@@ -49,7 +141,36 @@
 	 "userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
- 
+    {
+     "name": "Premier Football 4TH",
+     "image": "https://dookeela.live/uploads/1664499692.png",
+     "url": "https://streaming.livescorethai.net/iptv/bsb-epl4.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+	 "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+    },
+    {
+     "name": "Premier Football 4TTH",
+     "image": "https://dookeela.live/uploads/1664499692.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+	 "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+    },
+
+{  
+name:"Premier Football HD 4FW",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl4.png",
+url:"https://fw4free.inwstream.com/fw4free/ch4.stream/playlist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
     {
      "name": "True Premier Football 5",
      "image": "https://dookeela.live/uploads/1664499700.png",
@@ -59,118 +180,177 @@
 	 "userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
+    {
+     "name": "Premier Football 5TH",
+     "image": "https://dookeela.live/uploads/1664499700.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+	 "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+    },
+    {
+     "name": "Premier Football 5TTH",
+     "image": "https://dookeela.live/uploads/1664499700.png",
+     "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf5/playlist.m3u8",
+     "referer": "https://livescorethai.net/",
+	 "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+    },
+
+{  
+name:"Premier Football HD 5FW",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl5.png",
+url:"https://fw4free.inwstream.com/fw4free/ch5.stream/playlist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+{  
+name:"Premier Football HD 1",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
+url:"https://www.livedoomovies.com:4432/02_PremierHD1_720p/chunklist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
  
+{  
+name:"Premier Football HD 2",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
+url:"https://www.livedoomovies.com:4432/02_PremierHD2_720p/chunklist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+ 
+{  
+name:"Premier Football HD 3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
+url:"https://219.livedoomovies.com:4431/02_PremierHD3_720p/chunklist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+ 
+{  
+name:"Premier Football HD 4",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl4.png",
+url:"https://sport.livedoomovies.com:4432/02_PremierHD4_720p/chunklist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+ 
+{  
+name:"Premier Football HD 5",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl5.png",
+url:"https://sport.livedoomovies.com:4432/02_PremierHD5_720p/chunklist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
 
 
 {"name":"True Premier 1-A🇹🇭",
-"image":"https://i.imgur.com/Tjjl378.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 1-B🇹🇭",
-"image":"https://i.imgur.com/Tjjl378.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 1-C🇹🇭",
-"image":"https://i.imgur.com/Tjjl378.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
 "referer": "https://doolive4k.tv/",
-"info": "NexterPremierLeague",
 "playInNatPlayer": "true"},
 
 {"name":"True Premier 1-D🇹🇭",
-"image":"https://i.imgur.com/Tjjl378.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://www.ball24.tv/allchannel/?id=epl1",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 1-E🇹🇭",
-"image":"https://i.imgur.com/Tjjl378.png",
+"image":"https://dookeela.live/uploads/1664499665.png",
 "url":"https://www.livedoomovies.com:4432/02_PremierHD1_720p/chunklist.m3u8",
 "referer": "https://www.madoohd.com/",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 2-A🇹🇭",
-"image":"https://i.imgur.com/rXROqp8.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 2-B🇹🇭",
-"image":"https://i.imgur.com/rXROqp8.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 2-C🇹🇭",
-"image":"https://i.imgur.com/rXROqp8.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://www.livedoomovies.com:4432/02_PremierHD2_720p/chunklist.m3u8",
 "referer": "https://www.madoohd.com/",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 2-D🇹🇭",
-"image":"https://i.imgur.com/rXROqp8.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-2/chunks.m3u8",
 "referer": "https://doolive4k.tv/",
-"info": "NexterPremierLeague",
 "playInNatPlayer": "true"},
 
 {"name":"True Premier 2-E🇹🇭",
-"image":"https://i.imgur.com/rXROqp8.png",
+"image":"https://dookeela.live/uploads/1664499673.png",
 "url":"https://www.ball24.tv/allchannel/?id=epl2",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 3-A🇹🇭",
-"image":"https://i.imgur.com/gdQ0wRJ.png",
+"image":"https://dookeela.live/uploads/1664499681.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 3-B🇹🇭",
-"image":"https://i.imgur.com/gdQ0wRJ.png",
+"image":"https://dookeela.live/uploads/1664499681.png",
 "url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-3/chunks.m3u8",
 "referer": "https://doolive4k.tv/",
-"info": "NexterPremierLeague",
 "playInNatPlayer": "true"},
 
 {"name":"True Premier 4-A🇹🇭",
-"image":"https://i.imgur.com/6lrDy1m.png",
+"image":"https://dookeela.live/uploads/1664499692.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 4-B🇹🇭",
-"image":"https://i.imgur.com/6lrDy1m.png",
+"image":"https://dookeela.live/uploads/1664499692.png",
 "url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-4/chunks.m3u8",
 "referer": "https://doolive4k.tv/",
-"info": "NexterPremierLeague",
 "playInNatPlayer": "true"},
 
 {"name":"True Premier 5-A🇹🇭",
-"image":"https://i.imgur.com/f7TjBwW.png",
+"image":"https://dookeela.live/uploads/1664499700.png",
 "url":"https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
 "referer": "https://livescorethai.net/",
-"info": "NexterPremierLeague",
 "playInNatPlayer":"true"},
 
 {"name":"True Premier 5-B🇹🇭",
-"image":"https://i.imgur.com/f7TjBwW.png",
+"image":"https://dookeela.live/uploads/1664499700.png",
 "url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-5/chunks.m3u8",
 "referer": "https://doolive4k.tv/",
-"info": "NexterPremierLeague",
 "playInNatPlayer": "true"},
+
 
 
 
