--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -55,7 +55,7 @@ url:"https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 {  
-name:"Premier Football HD 1DB112",
+name:"PremierFootball HD1 B112",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
 url:"https://dooball2you.com/live/tpf1/",
 "referer": "https://dooball2you.com/",
@@ -63,7 +63,7 @@ url:"https://dooball2you.com/live/tpf1/",
 "playInNatPlayer": "true"
 },
 {  
-name:"Premier Football HD 1DBPLUS",
+name:"PremierFootball HD1 BPLUS",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
 url:"https://dooballplus.live/tpf1/",
 "referer": "https://dooballplus.live/",
@@ -71,7 +71,7 @@ url:"https://dooballplus.live/tpf1/",
 "playInNatPlayer": "true"
 },
 {  
-name:"Premier Football HD 1Anda888",
+name:"PremierFootball HD1 B888",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
 url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%E0%B8%AD%E0%B8%AD%E0%B8%99%E0%B9%84%E0%B8%A5%E0%B8%99%E0%B9%8C/truepremierfootballhd1/",
 "referer": "https://www.andaman888th.com/",
@@ -115,7 +115,7 @@ url:"https://fw4free.inwstream.com/fw4free/ch2.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 {  
-name:"Premier Football HD 2DB112",
+name:"PremierFootball HD2 B112",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
 url:"https://dooball2you.com/live/tpf2/",
 "referer": "https://dooball2you.com/",
@@ -123,7 +123,7 @@ url:"https://dooball2you.com/live/tpf2/",
 "playInNatPlayer": "true"
 },
 {  
-name:"Premier Football HD 2DBPLUS",
+name:"PremierFootball HD2 BPLUS",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
 url:"https://dooballplus.live/tpf2/",
 "referer": "https://dooballplus.live/",
@@ -131,7 +131,7 @@ url:"https://dooballplus.live/tpf2/",
 "playInNatPlayer": "true"
 },
 {  
-name:"Premier Football HD 2Anda888",
+name:"PremierFootball HD2 B888",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
 url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%E0%B8%AD%E0%B8%AD%E0%B8%99%E0%B9%84%E0%B8%A5%E0%B8%99%E0%B9%8C/truepremierfootballhd2/",
 "referer": "https://www.andaman888th.com/",
@@ -177,7 +177,7 @@ url:"https://fw4free.inwstream.com/fw4free/ch3.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 {  
-name:"Premier Football HD 3DB112",
+name:"PremierFootball HD3 B112",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
 url:"https://dooball2you.com/live/tpf3/",
 "referer": "https://dooball2you.com/",
@@ -185,7 +185,7 @@ url:"https://dooball2you.com/live/tpf3/",
 "playInNatPlayer": "true"
 },
 {  
-name:"Premier Football HD 3DBPLUS",
+name:"PremierFootball HD3 BPLUS",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
 url:"https://dooballplus.live/tpf3/",
 "referer": "https://dooballplus.live/",
@@ -193,7 +193,7 @@ url:"https://dooballplus.live/tpf3/",
 "playInNatPlayer": "true"
 },
 {  
-name:"Premier Football HD 3Anda888",
+name:"PremierFootball HD3 B888",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
 url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%E0%B8%AD%E0%B8%AD%E0%B8%99%E0%B9%84%E0%B8%A5%E0%B8%99%E0%B9%8C/truepremierfootballhd3/",
 "referer": "https://www.andaman888th.com/",
