--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -55,6 +55,14 @@ url:"https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 {  
+name:"PremierFootball HD1 B112m3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
+url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf1/th-sport/tpf1/chunks.m3u8?nimblesessionid=294769422",
+"referer": "https://dooball2you.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
 name:"PremierFootball HD1 B112",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
 url:"https://dooball2you.com/live/tpf1/",
