--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -55,7 +55,7 @@ url:"https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 {  
-name:"PremierFootball HD1 B112m3",
+name:"Premier HD1 DB112m3",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
 url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf1/th-sport/tpf1/chunks.m3u8?nimblesessionid=294769422",
 "referer": "https://dooball2you.com/",
@@ -63,7 +63,7 @@ url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf1/th-sport/tpf1/ch
 "playInNatPlayer": "true"
 },
 {  
-name:"PremierFootball HD1 B112",
+name:"Premier HD1 DB112",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
 url:"https://dooball2you.com/live/tpf1/",
 "referer": "https://dooball2you.com/",
@@ -71,7 +71,15 @@ url:"https://dooball2you.com/live/tpf1/",
 "playInNatPlayer": "true"
 },
 {  
-name:"PremierFootball HD1 BPLUS",
+name:"Premier HD1 DBPLUSm3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
+url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooballplus/tpf1/th-sport/tpf1/chunks.m3u8?nimblesessionid=294770810&wmsAuthSign=c2VydmVyX3RpbWU9MTAvNC8yMDI0IDI6Mzk6MDMgUE0maGFzaF92YWx1ZT1rS2RUZ0RIUkdWSUdSZlBCUGVVb0pnPT0mdmFsaWRtaW51dGVzPTEw",
+"referer": "https://dooballplus.live/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"Premier HD1 DBPLUS",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
 url:"https://dooballplus.live/tpf1/",
 "referer": "https://dooballplus.live/",
@@ -79,7 +87,15 @@ url:"https://dooballplus.live/tpf1/",
 "playInNatPlayer": "true"
 },
 {  
-name:"PremierFootball HD1 B888",
+name:"Premier HD1 DB888m3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
+url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/andaman888th/tpf1/th-sport/tpf1/chunks.m3u8?nimblesessionid=294771014",
+"referer": "https://www.andaman888th.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"Premier HD1 DB888",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
 url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%E0%B8%AD%E0%B8%AD%E0%B8%99%E0%B9%84%E0%B8%A5%E0%B8%99%E0%B9%8C/truepremierfootballhd1/",
 "referer": "https://www.andaman888th.com/",
@@ -123,7 +139,15 @@ url:"https://fw4free.inwstream.com/fw4free/ch2.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 {  
-name:"PremierFootball HD2 B112",
+name:"Premier HD2 DB112m3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
+url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf2/th-sport/tpf2/chunks.m3u8?nimblesessionid=294771385",
+"referer": "https://dooball2you.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"Premier HD2 DB112",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
 url:"https://dooball2you.com/live/tpf2/",
 "referer": "https://dooball2you.com/",
@@ -131,7 +155,15 @@ url:"https://dooball2you.com/live/tpf2/",
 "playInNatPlayer": "true"
 },
 {  
-name:"PremierFootball HD2 BPLUS",
+name:"Premier HD2 DBPLUSm3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
+url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooballplus/tpf2/th-sport/tpf2/chunks.m3u8?nimblesessionid=294771720&wmsAuthSign=c2VydmVyX3RpbWU9MTAvNC8yMDI0IDM6NTk6MjIgUE0maGFzaF92YWx1ZT1ydGcvR2tudHBNcWZRNFg4V2ZCcnBnPT0mdmFsaWRtaW51dGVzPTEw",
+"referer": "https://dooballplus.live/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"Premier HD2 DBPLUS",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
 url:"https://dooballplus.live/tpf2/",
 "referer": "https://dooballplus.live/",
@@ -139,7 +171,15 @@ url:"https://dooballplus.live/tpf2/",
 "playInNatPlayer": "true"
 },
 {  
-name:"PremierFootball HD2 B888",
+name:"Premier HD2 DB888m3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
+url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/andaman888th/tpf2/th-sport/tpf2/chunks.m3u8?nimblesessionid=294771937",
+"referer": "https://www.andaman888th.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"Premier HD2 DB888",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
 url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%E0%B8%AD%E0%B8%AD%E0%B8%99%E0%B9%84%E0%B8%A5%E0%B8%99%E0%B9%8C/truepremierfootballhd2/",
 "referer": "https://www.andaman888th.com/",
@@ -185,7 +225,15 @@ url:"https://fw4free.inwstream.com/fw4free/ch3.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 {  
-name:"PremierFootball HD3 B112",
+name:"Premier HD3 DB112m3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
+url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf3/th-sport/tpf3/chunks.m3u8?nimblesessionid=294772138",
+"referer": "https://dooball2you.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"Premier HD3 DB112",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
 url:"https://dooball2you.com/live/tpf3/",
 "referer": "https://dooball2you.com/",
@@ -193,7 +241,15 @@ url:"https://dooball2you.com/live/tpf3/",
 "playInNatPlayer": "true"
 },
 {  
-name:"PremierFootball HD3 BPLUS",
+name:"Premier HD3 DBPLUSm3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
+url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooballplus/tpf3/th-sport/tpf3/chunks.m3u8?nimblesessionid=294772423&wmsAuthSign=c2VydmVyX3RpbWU9MTAvNS8yMDI0IDExOjI3OjE5IEFNJmhhc2hfdmFsdWU9SDNpY0FuY0wvWFlaN0Nma0QvMDJmUT09JnZhbGlkbWludXRlcz0xMA==",
+"referer": "https://dooballplus.live/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"Premier HD3 DBPLUS",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
 url:"https://dooballplus.live/tpf3/",
 "referer": "https://dooballplus.live/",
@@ -201,14 +257,21 @@ url:"https://dooballplus.live/tpf3/",
 "playInNatPlayer": "true"
 },
 {  
-name:"PremierFootball HD3 B888",
+name:"Premier HD3 B888m3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
+url:"https://rr3-ic3d-ndjcs.huaweicdncloud.com/andaman888th/tpf3/th-sport/tpf3/chunks.m3u8?nimblesessionid=294772562",
+"referer": "https://www.andaman888th.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"Premier HD3 B888",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
 url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%E0%B8%AD%E0%B8%AD%E0%B8%99%E0%B9%84%E0%B8%A5%E0%B8%99%E0%B9%8C/truepremierfootballhd3/",
 "referer": "https://www.andaman888th.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-
 
 
     {
