--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -49,7 +49,7 @@
 {  
 name:"Premier Football HD 1FW",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
-url:"https://fw4free.inwstream.com/fw4free/ch1.stream/chunklist_w1366352425.m3u8",
+url:"https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8",
 "referer": "https://madoo.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
