--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -49,7 +49,7 @@
 name:"Premier Football HD 1FWt",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
 url:"https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8",
-"referer": "https://madoo.com/",
+"referer": "https://madoo.com/"
 },
 {  
 name:"Premier Football HD 1FW",
